force-app/main/default/objects/Holders__c/fields/PMI__c.field-meta.xml
<CustomField>
    <fullName>PMI__c</fullName>
    <label>PMI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONFIRM</fullName>
                <label>Confirm Alloy Type</label>
            </value>
            <value>
                <fullName>CHEMICAL</fullName>
                <label>Perform Chemical Test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>