force-app/main/default/objects/Holders__c/fields/Quote_Descriptions_Override__c.field-meta.xml
<CustomField>
    <fullName>Quote_Descriptions_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Descriptions Override</label>
    <type>Checkbox</type>
</CustomField>