force-app/main/default/objects/Holders__c/fields/Reducing_Bushing__c.field-meta.xml
<CustomField>
    <fullName>Reducing_Bushing__c</fullName>
    <label>Reducing Bushing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>