force-app/main/default/objects/Holders__c/fields/Reducing_Bushing_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Reducing_Bushing_Mid_Flange__c</fullName>
    <label>Reducing Bushing (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>