force-app/main/default/objects/Holders__c/fields/Rupture_Disc_Burst_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_Burst_Pressure__c</fullName>
    <inlineHelpText>Enter a value greater than 0 or leave blank to not filter Holder selection by disc burst pressure</inlineHelpText>
    <label>Rupture Disc Burst Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>