force-app/main/default/objects/Holders__c/fields/Rupture_Disc_Burst_Pressure_Converted__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_Burst_Pressure_Converted__c</fullName>
    <label>Rupture Disc Burst Pressure Converted</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>