force-app/main/default/objects/Holders__c/fields/Rupture_Disc_Burst_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_Burst_Temperature__c</fullName>
    <inlineHelpText>Enter operational temperature (-320F / -195C min to 1000F / 538C max) or leave blank to not filter Holder selection by disc burst temperature</inlineHelpText>
    <label>Rupture Disc Burst Temperature</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>