force-app/main/default/objects/Holders__c/fields/Rupture_Disc_Product__c.field-meta.xml
<CustomField>
    <fullName>Rupture_Disc_Product__c</fullName>
    <label>Rupture Disc Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAL</fullName>
                <label>CAL-VAC</label>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
                <label>CDCV-G</label>
            </value>
            <value>
                <fullName>CDV</fullName>
                <label>CDCV</label>
            </value>
            <value>
                <fullName>CFC</fullName>
                <label>Composite Formed Circular Vent Panel</label>
            </value>
            <value>
                <fullName>CFR</fullName>
                <label>Composite Formed Rectangular Vent Panel</label>
            </value>
            <value>
                <fullName>CFS</fullName>
                <label>Composite Formed Square Vent Panel</label>
            </value>
            <value>
                <fullName>CPC</fullName>
                <label>Composite Flat Circular Vent Panel</label>
            </value>
            <value>
                <fullName>CPR</fullName>
                <label>Composite Flat Rectangular Vent Panel</label>
            </value>
            <value>
                <fullName>CPS</fullName>
                <label>Composite Flat Square Vent Panel</label>
            </value>
            <value>
                <fullName>FCM</fullName>
                <label>CM</label>
            </value>
            <value>
                <fullName>FCV</fullName>
                <label>CMV</label>
            </value>
            <value>
                <fullName>FFA</fullName>
                <label>FA</label>
            </value>
            <value>
                <fullName>FFS</fullName>
                <label>FAS</label>
            </value>
            <value>
                <fullName>FFV</fullName>
                <label>FAV</label>
            </value>
            <value>
                <fullName>FRS</fullName>
                <label>RAS</label>
            </value>
            <value>
                <fullName>HPN</fullName>
                <label>HPX-90</label>
            </value>
            <value>
                <fullName>HPT</fullName>
                <label>HPX-Ta</label>
            </value>
            <value>
                <fullName>HPX</fullName>
                <label>HPX-95</label>
            </value>
            <value>
                <fullName>KBA</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
                <label>CM (LaMOT)</label>
            </value>
            <value>
                <fullName>LCV</fullName>
                <label>CMV (LaMOT)</label>
            </value>
            <value>
                <fullName>LDG</fullName>
                <label>LDV-G (LaMOT)</label>
            </value>
            <value>
                <fullName>LDS</fullName>
                <label>LDV-G in Screw Type (L)</label>
            </value>
            <value>
                <fullName>LDV</fullName>
                <label>LDV (LaMOT)</label>
            </value>
            <value>
                <fullName>LFA</fullName>
                <label>FA (LaMOT)</label>
            </value>
            <value>
                <fullName>LFV</fullName>
                <label>FAV (LaMOT)</label>
            </value>
            <value>
                <fullName>LLD</fullName>
                <label>LD (LaMOT)</label>
            </value>
            <value>
                <fullName>LOX</fullName>
                <label>LOTRX</label>
            </value>
            <value>
                <fullName>LPL</fullName>
                <label>PL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>