force-app/main/default/objects/Holders__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FS</fullName>
                <label>(FS) Flat Seat</label>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>(SF) Sanitary Fitting</label>
            </value>
            <value>
                <fullName>UL</fullName>
                <label>(UL) Union Light Lip</label>
            </value>
            <value>
                <fullName>CF</fullName>
                <label>(CF) Flanged Clean Sweep</label>
            </value>
            <value>
                <fullName>CL</fullName>
                <label>(CL) Flanged Clean Sweep</label>
            </value>
            <value>
                <fullName>DD</fullName>
                <label>(DD) Double Disc</label>
            </value>
            <value>
                <fullName>HL</fullName>
                <label>(HL) Heavy Lip</label>
            </value>
            <value>
                <fullName>LL</fullName>
                <label>(LL) Light Lip</label>
            </value>
            <value>
                <fullName>SL</fullName>
                <label>(SL) Sanitary Clean Sweep</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>(CS) Sanitary Clean Sweep</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>for (FS) Screw Type Holder</label>
            </value>
            <value>
                <fullName>VP</fullName>
                <label>(VP) Vent Panel</label>
            </value>
            <value>
                <fullName>TG</fullName>
                <label>(TG) Tongue and Groove</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>for (HF) Screw Type Holder</label>
            </value>
            <value>
                <fullName>UH</fullName>
                <label>(UH) Union Heavy Lip</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <label>for (LL) Screw Type Holder</label>
            </value>
            <value>
                <fullName>HF</fullName>
                <label>(HF) High Pressure Flat Seat</label>
            </value>
            <value>
                <fullName>UF</fullName>
                <label>(UF) Union Flat Seat</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>