force-app/main/default/objects/Holders__c/fields/Select_Excess_Flow_Valve__c.field-meta.xml
<CustomField>
    <fullName>Select_Excess_Flow_Valve__c</fullName>
    <label>Select Excess Flow Valve</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flow1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>