force-app/main/default/objects/Holders__c/fields/Select_Physical_Properties__c.field-meta.xml
<CustomField>
    <fullName>Select_Physical_Properties__c</fullName>
    <label>Select Physical Properties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>