force-app/main/default/objects/Holders__c/fields/Select_Physical_Properties_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Select_Physical_Properties_Mid_Flange__c</fullName>
    <label>Select Physical Properties (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>