force-app/main/default/objects/Holders__c/fields/Select_Reducer_Bushing__c.field-meta.xml
<CustomField>
    <fullName>Select_Reducer_Bushing__c</fullName>
    <label>Select Reducer Bushing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bushing1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>