force-app/main/default/objects/Holders__c/fields/Select_Tube_Case_Material_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Select_Tube_Case_Material_Mid_Flange__c</fullName>
    <label>Select Tube/ Case Material (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>