force-app/main/default/objects/Holders__c/fields/Select_UOM_Press_Range__c.field-meta.xml
<CustomField>
    <fullName>Select_UOM_Press_Range__c</fullName>
    <label>Select UOM/ Press Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>