force-app/main/default/objects/Holders__c/fields/Select_UOM_Press_Range_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Select_UOM_Press_Range_Mid_Flange__c</fullName>
    <label>Select UOM/ Press Range (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>