force-app/main/default/objects/Holders__c/fields/Shell_Testing__c.field-meta.xml
<CustomField>
    <fullName>Shell_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shell Testing</label>
    <type>Checkbox</type>
</CustomField>