force-app/main/default/objects/Holders__c/fields/Size2__c.field-meta.xml
<CustomField>
    <fullName>Size2__c</fullName>
    <label>Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>