force-app/main/default/objects/Holders__c/fields/Size_Unit__c.field-meta.xml
<CustomField>
    <fullName>Size_Unit__c</fullName>
    <label>Size Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>US Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>