force-app/main/default/objects/Holders__c/fields/Spacer_Ring_Material__c.field-meta.xml
<CustomField>
    <fullName>Spacer_Ring_Material__c</fullName>
    <label>Spacer Ring Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>