force-app/main/default/objects/Holders__c/fields/Tee2__c.field-meta.xml
<CustomField>
    <fullName>Tee2__c</fullName>
    <label>Tee(Outlet)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>