force-app/main/default/objects/Holders__c/fields/Tee__c.field-meta.xml
<CustomField>
    <fullName>Tee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tee</label>
    <type>Checkbox</type>
</CustomField>