force-app/main/default/objects/Holders__c/fields/Tee_Handle_Material__c.field-meta.xml
<CustomField>
    <fullName>Tee_Handle_Material__c</fullName>
    <label>Tee Handle Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <label>300 Series SS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>