force-app/main/default/objects/Holders__c/fields/Tee_Mid_Flange__c.field-meta.xml
<CustomField>
    <fullName>Tee_Mid_Flange__c</fullName>
    <label>Tee (Mid Flange)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>