force-app/main/default/objects/Holders__c/fields/X3A_Sanitary_Standards__c.field-meta.xml
<CustomField>
    <fullName>X3A_Sanitary_Standards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3A Sanitary Standards</label>
    <type>Checkbox</type>
</CustomField>