force-app/main/default/objects/Holders__c/fields/Zone_0_2__c.field-meta.xml
<CustomField>
    <fullName>Zone_0_2__c</fullName>
    <label>Zone (0-2)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>