force-app/main/default/objects/Holders__c/validationRules/Bolting_Class_Constrain.validationRule-meta.xml
<ValidationRule>
    <fullName>Bolting_Class_Constrain</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Bolting_Class__c  )
)&amp;&amp;
( IsProductSelection__c = TRUE)</errorConditionFormula>
    <errorMessage>Bolting Class: Please Choose a Value</errorMessage>
</ValidationRule>