force-app/main/default/objects/Holders__c/validationRules/Holder_Max_Pressure_Units.validationRule-meta.xml
<ValidationRule>
    <fullName>Holder_Max_Pressure_Units</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT(  Holder_Max_Pressure_Units__c ))
)&amp;&amp;
( IsProductSelection__c = TRUE)</errorConditionFormula>
    <errorMessage>Holder Max Pressure Units: Please Select a Value</errorMessage>
</ValidationRule>