force-app/main/default/objects/Holders__c/validationRules/Holder_Product_Constrain.validationRule-meta.xml
<ValidationRule>
    <fullName>Holder_Product_Constrain</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT(  Holder_Product__c  ))
)&amp;&amp;
( IsProductSelection__c = TRUE)</errorConditionFormula>
    <errorMessage>Holder Product: Please select a Value</errorMessage>
</ValidationRule>