force-app/main/default/objects/Holders__c/validationRules/PartNumber_Base_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PartNumber_Base_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
LEN(Part_Number_Base__c)&lt;&gt;10,
PartNumberBase_Checkbox__c=TRUE
)&amp;&amp;
( Bypass__c = FALSE)</errorConditionFormula>
    <errorMessage>The Part Number should contain 10 characters</errorMessage>
</ValidationRule>