force-app/main/default/objects/Holders__c/validationRules/Quantity_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Quantity__c )),
    Quantity__c &lt;= 0
)&amp;&amp;
( IsProductSelection__c = TRUE)</errorConditionFormula>
    <errorMessage>Quantity: Please Enter a Value greater than 0</errorMessage>
</ValidationRule>