force-app/main/default/objects/Holders__c/validationRules/Required_Gas_Group_on_ATEX.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Gas_Group_on_ATEX</fullName>
    <active>true</active>
    <description>Make Gas Group required If ATEX is selected</description>
    <errorConditionFormula>AND ( ATEX_Certificate__c , ISBLANK( TEXT( Gas_Group__c ) ) )</errorConditionFormula>
    <errorMessage>Please select Gas Group</errorMessage>
</ValidationRule>