force-app/main/default/objects/Holders__c/validationRules/Required_Zone_on_ATEX.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Zone_on_ATEX</fullName>
    <active>true</active>
    <description>Make Required Zone (0-2) if ATEX is true</description>
    <errorConditionFormula>AND(  ATEX_Certificate__c , ISBLANK( TEXT (  Zone_0_2__c  ) ) )</errorConditionFormula>
    <errorMessage>Please select Zone (0-2)</errorMessage>
</ValidationRule>