force-app/main/default/objects/Holders__c/validationRules/Size_Constrain.validationRule-meta.xml
<ValidationRule>
    <fullName>Size_Constrain</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT( Brand_Dependent_Size__c))
)&amp;&amp;
( IsProductSelection__c = TRUE)</errorConditionFormula>
    <errorMessage>Size: Please Choose a Value</errorMessage>
</ValidationRule>