force-app/main/default/objects/Holders__c/validationRules/Size_Units_Constrain.validationRule-meta.xml
<ValidationRule>
    <fullName>Size_Units_Constrain</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISBLANK(TEXT(  Size_Unit__c ))
)&amp;&amp;
(  IsProductSelection__c  = TRUE)</errorConditionFormula>
    <errorMessage>Size Unit: Please Choose a Value</errorMessage>
</ValidationRule>