force-app/main/default/objects/Holders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Line__c</columns>
    <columns>ASSYPARTNOBASE__c</columns>
    <columns>ASSYPARTEXISTING__c</columns>
    <columns>Part_Number_Base__c</columns>
    <columns>Part_Number__c</columns>
    <columns>IsComponentsSelected__c</columns>
    <columns>Add_Excess_Flow_Valve__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Part_Number__c</field>
        <operation>startsWith</operation>
        <value>cd</value>
    </filters>
    <label>All</label>
</ListView>